# pygorilla

./: README.md  pyproject.toml
src/pygorilla/: __init__.py
tests/: test_dataframes.py
