[project]
name = "pygorilla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Guilherme Pires", email = "gpires@altius.org" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
